Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23622

QObject static and member implementations use inconsistent const

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.0.0 Beta 1
    • 4.8.0
    • Core: Object Model
    • None
    •  5dc506ad841685c8404c085bd8cf9c5442518897

    Description

      QObject Public Functions:

      bool connect(const QObject* sender, ... ) const;
      bool disconnect(const QObject* receiver, ... );
      

      QObject Static Public Members:

      bool connect(const QObject* sender, ... , const QObject * receiver, ... );
      bool disconnect(const QObject * sender, ... , const QObject * receiver, ... );
      

      Notice that all QObject references are const, except that the disconnect member methods are non-const functions.

      Please fix this inconsistency, by making the disconnect function const as well.

      Attachments

        For Gerrit Dashboard: QTBUG-23622
        # Subject Branch Project Status CR V

        Activity

          People

            ogoffart Olivier Goffart (Woboq GmbH)
            arbmind Andreas Reischuck
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes